--- a/WebApplication1/client/src/App.css
+++ b/WebApplication1/client/src/App.css
@@ -1,33 +1,61 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+header {
+    border: 1px solid #000;
+    display: flex;
+    float: left;
+    width: 100%;
+}
+
+header ul {
+    margin: auto;
+}
+
+header ul li {
+    float: left;
+    list-style: none;
+    padding: 20px;
+}
+
+#content {
+    border: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+#content table {
+    margin: 20px;
 }
